--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -11,7 +11,14 @@
     height: 100%;
 }
 
+#result
+{
+    display: none;
+}
 .CodeMirror
 {
     height: 100%;
+    font-family: Microsoft YaHei, "Î¢ÈíÑÅºÚ";
 }
+
+
