--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -15,6 +15,12 @@
 {
     display: none;
 }
+#resultframe
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
 .CodeMirror
 {
     height: 100%;
