--- a/Source/FE/css/nav.css
+++ b/Source/FE/css/nav.css
@@ -1,4 +1,4 @@
-.play {
+.play,.stop {
     height: 20px;
     width: 20px;
     display: block;
@@ -11,10 +11,21 @@
     height: 0;
     width: 0;
     display: block;
-    border: 10px transparent solid;
+    border: 12px transparent solid;
     border-right-width: 0;
     border-left-color: #333;
     position: absolute;
-    top: 5px;
+    top: 4px;
     left: 0px;
+}
+
+.stop:before {
+    content: '';
+    height: 22px;
+    width: 22px;
+    display: block;
+    background: #333;
+    position: absolute;
+    top: 4px;
+    left: -2px;
 }
