--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -20,11 +20,13 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    font-family: Microsoft YaHei, "Î¢ÈíÑÅºÚ";
 }
 .CodeMirror
 {
     height: 100%;
     font-family: Microsoft YaHei, "Î¢ÈíÑÅºÚ";
+
 }
 
 
