--- a/Source/FE/css/nav.css
+++ b/Source/FE/css/nav.css
@@ -29,3 +29,10 @@
     top: 9px;
     left: -2px;
 }
+
+#newCase
+{
+    font-family: Microsoft YaHei, "Î¢ÈíÑÅºÚ";
+    margin: 0 10px;
+    cursor: pointer;
+}
