--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -3,13 +3,20 @@
     position: absolute;
     top:30px;
     bottom: 0;
-
+    display: -webkit-flex; /* Safari */
+    display: flex;
+    flex-wrap: nowrap;
 }
 .editor
 {
     border-left:1px solid #aaa;
     height: 100%;
+    min-width: 300px;
+    flex-shrink:1;
+    flex-grow:1;
+    box-sizing: content-box;
 }
+
 
 #result
 {
