添加动态隐藏editor

--- a/Source/FE/css/layout.css
+++ b/Source/FE/css/layout.css
@@ -10,7 +10,7 @@
     height: 30px;
     line-height: 30px;
     width: 100%;
-    background-color: rgb(76, 175, 80);
+    font-family: Microsoft YaHei, "微软雅黑";
 
 }
 
