优化部份细节

--- a/Source/FE/css/layout.css
+++ b/Source/FE/css/layout.css
@@ -76,7 +76,7 @@
     bottom: 10px;
     z-index: 100;
     cursor: pointer;
-    background-color: #0055aa;
+    background-color: #3bbec0;
     color: #fff;
 
 }
