--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -6,12 +6,14 @@
     display: -webkit-flex; /* Safari */
     display: flex;
     flex-wrap: nowrap;
+    justify-content:flex-end;
 }
 .editor
 {
-    border-left:1px solid #aaa;
+    border-left:1px solid #eee;
     height: 100%;
     min-width: 300px;
+    max-width: 1100px;
     flex-shrink:1;
     flex-grow:1;
     box-sizing: content-box;
