--- a/Source/FE/css/layout.css
+++ b/Source/FE/css/layout.css
@@ -88,7 +88,7 @@
     height: 3em;
     width: 100%;
     position: fixed;
-    bottom: 10px;
+    top: 0px;
     z-index: 1001;
     padding: 8px 35px 8px 14px;
     margin-bottom: 20px;
