--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -11,7 +11,7 @@
 .editor
 {
     position: relative;
-    border-left:1px solid #eee;
+    border-left:1px solid #2b2020;/*TODO:theme #eee*/
     height: 100%;
     min-width: 300px;
     max-width: 1100px;
@@ -42,7 +42,7 @@
 .code-tag
 {
     position: absolute;
-    top:1px;
+    top:-3px;
     right: 25px;
     color: #ddd;
     z-index: 1001;
