--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content:flex-end;
+    /* top: 30px; */
 }
 .editor
 {
@@ -19,7 +20,13 @@
     flex-grow:1;
     box-sizing: content-box;
 }
-
+.editor>textarea
+{
+    border: none;
+    margin: 0;
+    padding: 0;
+    background: #2c2827;/*TODO:theme*/
+}
 
 #result
 {
@@ -30,12 +37,12 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    font-family: Microsoft YaHei,"微软雅黑";
+    font-family: Microsoft YaHei,"å¾®è½¯é›…é»‘";
 }
 .CodeMirror
 {
     height: 100%;
-    font-family: Microsoft YaHei,"微软雅黑";
+    font-family: Microsoft YaHei,"å¾®è½¯é›…é»‘";
 
 }
 
@@ -46,7 +53,7 @@
     right: 25px;
     color: #ddd;
     z-index: 1001;
-    font-family: Microsoft YaHei,"微软雅黑";
+    font-family: Microsoft YaHei,"å¾®è½¯é›…é»‘";
 }
 
 
