--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -7,18 +7,18 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content:flex-end;
-    /* top: 30px; */
+    background: #2c2827;/*TODO:theme*/
 }
 .editor
 {
     position: relative;
     border-left:1px solid #2b2020;/*TODO:theme #eee*/
+    background: #2c2827;/*TODO:theme*/
     height: 100%;
     min-width: 300px;
     max-width: 1100px;
     flex-shrink:1;
     flex-grow:1;
-    box-sizing: content-box;
 }
 .editor>textarea
 {
@@ -54,6 +54,11 @@
     color: #ddd;
     z-index: 1001;
     font-family: Microsoft YaHei,"å¾®è½¯é›…é»‘";
+}
+
+iframe
+{
+    background-color:#fff;
 }
 
 
