--- a/Source/FE/css/layout.css
+++ b/Source/FE/css/layout.css
@@ -84,37 +84,40 @@
 }
 
 
-/*æç¤º*/
 #notice
 {
-    height: 3em;
+    height: 2em;
     width: 100%;
     position: fixed;
-    top: 0px;
+    top: 0;
     z-index: 1001;
     padding: 8px 35px 8px 14px;
-    margin-bottom: 20px;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-    font:normal normal  bolder 1em/3em Microsoft YaHei,"å¾®è½¯é›…é»‘";
+    font:normal normal  bolder 1em/2em Microsoft YaHei,"微软雅黑";
     text-align: center;
     opacity:0;
 }
 
 .notice-show
 {
-    -webkit-animation:show-notice 1.5s linear;
-    -o-animation:show-notice 1.5s linear;
-    animation:show-notice 1.5s linear;
+    -webkit-animation:show-notice 2s linear;
+    -o-animation:show-notice 2s linear;
+    animation:show-notice 2s linear;
 }
-
+.notice-show-3s
+{
+    -webkit-animation:show-notice 3s linear;
+    -o-animation:show-notice 3s linear;
+    animation:show-notice 3s linear;
+}
 
 @keyframes show-notice {
     0%
     {
         opacity:1;
     }
-    75%
-    {
+    75% {
+
         opacity:1;
     }
     100% {
@@ -143,4 +146,14 @@
     color: #c09853;
     background-color: #fcf8e3;
     border-color:#fbeed5;
+}
+
+.notice-cancel
+{
+    border:1px solid #aaa;
+    border-radius: 3px;
+    padding: 0 5px;
+    cursor: pointer;
+    margin-left: 10px;
+
 }
