--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -18,7 +18,7 @@
     height: 100%;
     min-width: 300px;
     max-width: 1100px;
-    flex-shrink:1;
+    /*flex-shrink:1;*/
     flex-grow:1;
 }
 .editor>textarea
