--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -2,7 +2,7 @@
 .editors
 {
     position: absolute;
-    top:30px;
+    top: 30px;
     bottom: 0;
     display: -webkit-flex; /* Safari */
     display: flex;
@@ -13,7 +13,7 @@
 .editor
 {
     position: relative;
-    border-left:1px solid #2b2020;/*TODO:theme #eee*/
+    border-left: 1px solid #423838;/*TODO:theme #eee*/
     background: #2c2827;/*TODO:theme*/
     height: 100%;
     min-width: 300px;
@@ -55,7 +55,7 @@
     right: 25px;
     color: #806060;/*TODO:theme #ddd*/
     z-index: 1001;
-    font-size: 0.5em;
+    font-size: 0.8em;
     font-family: Microsoft YaHei,"微软雅黑";
     cursor: pointer;
 }
