--- a/Source/FE/css/layout.css
+++ b/Source/FE/css/layout.css
@@ -73,9 +73,9 @@
 {
     display: block;
     position: fixed;
-    padding: 5px;
-    border-radius: 0 10px 10px 0;
-    bottom: 10px;
+    padding: 3px 8px 2px 0;
+    border-radius: 0 6px 6px 0;
+    top: 4px;
     z-index: 100;
     cursor: pointer;
     background-color: rgba(113, 198, 243, 0.18);
