优化提示显示位置和物效

--- a/Source/FE/css/layout.css
+++ b/Source/FE/css/layout.css
@@ -54,7 +54,7 @@
     float: right;
 }
 
-.code-list
+.code-list,.config-list
 {
     padding-top: 20px;
     list-style: none;
@@ -102,42 +102,46 @@
 #notice
 {
     height: 2em;
-    width: 100%;
     position: fixed;
-    top: 0;
+    right: 0;
+    bottom: 0;
     z-index: 1001;
     padding: 8px 35px 8px 14px;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     font:normal normal  bolder 1em/2em Microsoft YaHei,"ÃƒÆ’Ã‚Â¥Ãƒâ€šÃ‚Â¾Ãƒâ€šÃ‚Â®ÃƒÆ’Ã‚Â¨Ãƒâ€šÃ‚Â½Ãƒâ€šÃ‚Â¯ÃƒÆ’Ã‚Â©ÃƒÂ¢Ã¢â€šÂ¬Ã‚ÂºÃƒÂ¢Ã¢â€šÂ¬Ã‚Â¦ÃƒÆ’Ã‚Â©Ãƒâ€šÃ‚Â»ÃƒÂ¢Ã¢â€šÂ¬Ã‹Å“";
-    text-align: center;
     opacity:0;
 }
 
 .notice-show
 {
-    -webkit-animation:show-notice 2s linear;
-    -o-animation:show-notice 2s linear;
-    animation:show-notice 2s linear;
+    -webkit-animation:show-notice 1s linear 3s;
+    -o-animation:show-notice 1s linear 3s;
+    animation:show-notice 1s linear 3s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 }
 .notice-show-3s
 {
-    -webkit-animation:show-notice 3s linear;
-    -o-animation:show-notice 3s linear;
-    animation:show-notice 3s linear;
+    -webkit-animation:show-notice 1s linear 5s;
+    -o-animation:show-notice 1s linear 5s;
+    animation:show-notice 1s linear 5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
 }
 
 @keyframes show-notice {
-    0%
-    {
-        opacity:1;
+    from {
+        opacity: 1;
     }
-    75% {
 
-        opacity:1;
+    50% {
+        opacity: 0;
+        -webkit-transform: scale3d(.3, .3, .3);
+        transform: scale3d(.3, .3, .3);
     }
-    100% {
-        
-        opacity:0;
+
+    to {
+        opacity: 0;
     }
 }
 .confirm {
