--- a/Source/FE/css/editor.css
+++ b/Source/FE/css/editor.css
@@ -40,6 +40,10 @@
     height: 100%;
     font-family: Microsoft YaHei,"微软雅黑";
 }
+#resultframe
+{
+    border:0px;
+}
 .CodeMirror
 {
     height: 100%;
